--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-svg": "^16.1.34"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
